--- a/GSMApp/web/WEB-INF/web.xml
+++ b/GSMApp/web/WEB-INF/web.xml
@@ -22,14 +22,16 @@
         </jsp-property-group>
     </jsp-config>
 
-    <!--    <filter>
+    <filter>
         <filter-name>AuthenticateFilter</filter-name>
         <filter-class>com.gsm.web.controller.AuthenticateFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>AuthenticateFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
+    
+    
     <servlet>
         <servlet-name>LoginController</servlet-name>
         <servlet-class>com.gsm.web.controller.LoginController</servlet-class>
